# CMake-Project-Template

./: .gitmodules  CMakeLists.txt  README.md
src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
src/Utility/: Log.hpp
test/: CMakeLists.txt  some_test.cpp
